added google login

--- a/frontend-security/src/app/login/login.component.html
+++ b/frontend-security/src/app/login/login.component.html
@@ -14,8 +14,14 @@
         <br><br>
         <button (click)="login()">Login</button> 
         <button routerLink="/signup">SignUp</button>
+
         
         <br><br>
     </form>
+
+    <br><br><br>
+    <asl-google-signin-button type="icon" size="medium" >
+      </asl-google-signin-button>
+      
 </div>
 </div>
