--- a/frontend-security/src/app/login/login.component.html
+++ b/frontend-security/src/app/login/login.component.html
@@ -1,27 +1,51 @@
 <div class="login">
-    <h2>Login</h2><br>
-    <div class="container">
+  <br /><br /><br />
+  <div class="container conatiner-fluid card">
+    <h2>Login</h2>
     <form id="" method="" action="">
-        <label><b>User Name
-        </b>
-        </label>
-        <input type="text" name="" id="email" placeholder="Enter Your Name" [(ngModel)]="loginData.email"  [ngModelOptions]="{standalone: true}">
-        <br><br>
-        <label><b>Password
-        </b>
-        </label>
-        <input type="Password" name="password" id="" placeholder="Enter Password" [(ngModel)]="loginData.password"  [ngModelOptions]="{standalone: true}">
-        <br><br>
-        <button (click)="login()">Login</button> 
-        <button routerLink="/signup">SignUp</button>
-
-        
-        <br><br>
+      <!-- <label><b>User Name</b></label> -->
+      <input
+        type="text"
+        name=""
+        id="email"
+        placeholder="Enter Your Name"
+        [(ngModel)]="loginData.email"
+        [ngModelOptions]="{ standalone: true }"
+      />
+     
+      <!-- <label><b>Password </b></label> -->
+      <input
+        type="Password"
+        name="password"
+        id=""
+        placeholder="Enter Password"
+        [(ngModel)]="loginData.password"
+        [ngModelOptions]="{ standalone: true }"
+      />
+    
+      <button class="btn1" (click)="login()">LogIn</button>
     </form>
 
-    <br><br><br>
-    <asl-google-signin-button type="icon" size="medium" >
-      </asl-google-signin-button>
-      
+
+    <h3>OR</h3>
+
+<div style="display: flex; justify-content: center">
+  <asl-google-signin-button type="standard" size="large"  text='signin_with' width="3vw" 
+  style="
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10%;
+  width: 5vw;
+  size: large;
+"
+  >
+  </asl-google-signin-button>
 </div>
-</div>
+ 
+    <!-- <button routerLink="/signup">SignUp</button> -->
+    <span class="span-container"
+      >Don't have an account? <a routerLink="/signup">Register here</a></span
+    >
+
+  
