--- a/frontend-security/src/app/dashboard/dashboard.component.html
+++ b/frontend-security/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,32 @@
+
+<nav class="navbar navbar-expand-lg ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active item" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active item item" aria-current="page" href="#">Company</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active item item" aria-current="page" href="#">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active item" aria-current="page" href="#">About Us</a>
+          </li>
+         
+          
+        
+        </ul>
+        <button (click)="logout()">logout</button>
+      </div>
+    </div>
+  </nav>
+
+
 <h2>Welcome User !!!!</h2>
-<button (click)="logout()">logout</button>
