--- a/frontend-security/src/app/register/register.component.html
+++ b/frontend-security/src/app/register/register.component.html
@@ -1,31 +1,34 @@
 <div class="login">
-    <h2>SignUp</h2><br>
-    <div class="container">
+   
+    <div class="container conatiner-fluid card">
+        <h2>SignUp</h2>
     <form id="" method="" action="">
-        <label><b>First Name
+        <!-- <label><b>First Name
         </b>
-        </label>
+        </label> -->
         <input type="text" name="" id="" placeholder="Enter Your First Name" [(ngModel)]="firstName"  [ngModelOptions]="{standalone: true}">
-        <br><br>
-        <label><b>Last Name
-        </b>
-        </label>
-        <input type="text" name="" id="" placeholder="Enter Your Last Name" [(ngModel)]="lastName"  [ngModelOptions]="{standalone: true}">
-        <br><br>
-        <label><b>Email <br>
-        </b>
-        </label>
-        <input type="email" name="" id="" placeholder="Enter Your Email" [(ngModel)]="email"  [ngModelOptions]="{standalone: true}">
-        <br><br>
-        <label><b>Password
-        </b>
-        </label>
-        <input type="Password" name="" id="" placeholder="Enter Password"[(ngModel)]="password"  [ngModelOptions]="{standalone: true}">
-        <br><br>
-        <button (click)="register()">SignUp</button>
-        <button routerLink="">Login</button>
       
-        <br><br>
+        <!-- <label><b>Last Name
+        </b>
+        </label> -->
+        <input type="text" name="" id="" placeholder="Enter Your Last Name" [(ngModel)]="lastName"  [ngModelOptions]="{standalone: true}">
+       
+        <!-- <label><b>Email <br>
+        </b>
+        </label> --> 
+        <input type="email" name="" id="" placeholder="Enter Your Email" [(ngModel)]="email"  [ngModelOptions]="{standalone: true}">
+       
+        <!-- <label><b>Password
+        </b>
+        </label> --> 
+        <input type="Password" name="" id="" placeholder="Enter Password"[(ngModel)]="password"  [ngModelOptions]="{standalone: true}">
+         <div class="container2">
+        <button class="btn1" (click)="register()">SignUp</button>
+    </div>
+    
     </form>
+    <div class="span-container" ></div>
+    <span>Already have an account? <a routerLink="/">Login Here</a></span>
+    <!-- <button routerLink="">Login</button> -->
 </div>
 </div>
