--- a/frontend-security/src/styles.scss
+++ b/frontend-security/src/styles.scss
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import '~bootstrap/dist/css/bootstrap.min.css';
+// html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body{
+     background-color: #aba4ddbe; 
+    // background-color: #aba4dd8c; 
+    margin-top: 2vw;
+    
+    }
