--- a/frontend-security/src/app/login/login.component.html
+++ b/frontend-security/src/app/login/login.component.html
@@ -12,7 +12,7 @@
         [(ngModel)]="loginData.email"
         [ngModelOptions]="{ standalone: true }"
       />
-     
+
       <!-- <label><b>Password </b></label> -->
       <input
         type="Password"
@@ -22,30 +22,34 @@
         [(ngModel)]="loginData.password"
         [ngModelOptions]="{ standalone: true }"
       />
-    
+
       <button class="btn1" (click)="login()">LogIn</button>
     </form>
 
-
     <h3>OR</h3>
 
-<div style="display: flex; justify-content: center">
-  <asl-google-signin-button type="standard" size="large"  text='signin_with' width="3vw" 
-  style="
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 10%;
-  width: 5vw;
-  size: large;
-"
-  >
-  </asl-google-signin-button>
-</div>
- 
+    <div style="display: flex; justify-content: center">
+      <asl-google-signin-button 
+        type="standard"
+        size="large"
+        
+        width="3vw"
+        style="
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 10%;
+          width: 5vw;
+          size: large;
+        "
+      >
+      <span (click)="signInWithGoogle()">Login with Google</span>
+      </asl-google-signin-button>
+    </div>
+
     <!-- <button routerLink="/signup">SignUp</button> -->
     <span class="span-container"
       >Don't have an account? <a routerLink="/signup">Register here</a></span
     >
-
-  
+  </div>
+</div>
